# dotfiles

./: .tmux.conf
.config/nvim/: init.vim
.xmonad/: Extra.hs  Makefile  build  xm.cabal  xmonad.hs
