------------------------------------------------------------------------------
name:          mzs-xmonad-config
version:       0.2
synopsis:      XMonad Testing Repository
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Dave Foster <dave.foster@gmail.com>
maintainer:    Dave Foster <dave.foster@gmail.com>
copyright:     Copyright (c) 2009-2020 Dave Foster
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
executable xmonad-x86_64-linux
  main-is: xmonad.hs
  ghc-options: -Wall -fno-warn-missing-signatures
  build-depends: base, xmonad, xmonad-contrib, containers, X11, dbus, utf8-string
  other-modules: Extra
